--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" content="Compositores"/>
+    <meta name="description" content="lista de compositores"/>
+    <meta name="keywords" content="html, css, javascript, react" />
+    <meta name="author" content="Tony Vargas" />
+    <meta name="robots" content="index, follow"/>
+
+    <link rel="canonical" href="https://musica-maestro.vercel.app/"/>
     <title>Compositores con Vite + React</title>
   </head>
   <body>
